@@ -23,8 +23,9 @@ Build-Depends: debhelper (>= 9.20160114),
                libmemcached-dev (>= 0.41),
                libhiredis-dev
 Homepage: http://www.proftpd.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-proftpd/proftpd-dfsg.git
-Vcs-Browser: https://anonscm.debian.org/git/pkg-proftpd/proftpd-dfsg.git
+Vcs-Browser: https://salsa.debian.org/debian-proftpd-team/proftpd
+Vcs-Git: https://salsa.debian.org/debian-proftpd-team/proftpd.git
+
 
 Package: proftpd-basic
 Architecture: any
