@@ -3,6 +3,9 @@ proftpd-dfsg (1.3.6-2) UNRELEASED; urgency=medium
   [ Hilmar Preuße]
   * lintian: file-contains-trailing-whitespace: debian/changelog
 
+  [ Francesco Paolo Lovergine ]
+  * Updated Vcs-* fields to reflect moving to salsa from alioth.
+
  -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 25 Mar 2018 23:08:40 +0200
 
 proftpd-dfsg (1.3.6-1) unstable; urgency=medium
